[package]
name = "repost"
version = "0.1.0"
authors = ["Miccah Castorina <m.castorina93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
builder-pattern = "0.4"
chrono = "0.4"
reqwest = "0.11"
http = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3.0", features = ["derive"] }
rustyline = "9.1"
rustyline-derive = "0.6"
shlex = "1.1"
thiserror = "1"
comfy-table = "5"
